# stm-usb

./: .gitignore  Makefile  README.md  embassy-usb-dfu-guide.md
.github/workflows/: ci.yml
control/: Cargo.toml
control/src/: lib.rs
control/www/: index.html  style.css
firmware/: Cargo.toml
firmware/.cargo/: config.toml
firmware/src/: echo.rs  main.rs
scripts/: check.sh  pre-push
