[package]
name = "control"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "DomTokenList",
    "CssStyleDeclaration",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlButtonElement",
    "Navigator",
    "Usb",
    "UsbDevice",
    "UsbDeviceFilter",
    "UsbDeviceRequestOptions",
    "UsbConfiguration",
    "UsbInterface",
    "UsbAlternateInterface",
    "UsbEndpoint",
    "UsbInTransferResult",
    "UsbOutTransferResult",
    "UsbControlTransferParameters",
    "UsbRecipient",
    "UsbRequestType",
    "UsbTransferStatus",
    "Event",
    "EventTarget",
    "KeyboardEvent",
] }
console_error_panic_hook = "0.1"
dfu-core = { version = "0.10", features = ["std", "async"] }
futures = "0.3"
send_wrapper = "0.6"

[profile.release]
opt-level = "s"
lto = true
