[package]
name = "firmware"
version = "0.1.0"
edition = "2021"

[features]
default = ["stm32f412"]
stm32f411 = ["embassy-stm32/stm32f411ce"]
stm32f412 = ["embassy-stm32/stm32f412zg"]

[dependencies]
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread"] }
embassy-stm32 = { version = "0.2", features = ["time-driver-any", "memory-x"] }
embassy-usb = { version = "0.4" }
embassy-sync = { version = "0.7" }
embassy-time = { version = "0.4" }
embassy-futures = "0.1"

cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = "2"
heapless = "0.8"

[profile.release]
debug = 2
lto = true
opt-level = "s"
